@@ -24,6 +24,11 @@
       <essential/>
       <frozen/>
     </group>
+    <group name="proposed">
+      <description>GNOME modules proposed for inclusion in GNOME 2.10.</description>
+      <essential/>
+      <frozen/>
+    </group>
 	</release>
   <release name="HEAD">
     <group name="fifth-toe">
@@ -966,8 +971,8 @@
     </version>
   </module>
   <module name="gnome-backgrounds">
-    <version release="HEAD">
-      <component name="gnome-backgrounds" dir="gnome-backgrounds" group="extras">
+    <version release="gnome-2.10">
+      <component name="gnome-backgrounds" dir="gnome-backgrounds" group="proposed">
         <podir dir="po"/>
         <potname name="gnome-backgrounds.pot"/>
         <branch name="HEAD"/>
@@ -1095,7 +1100,7 @@
   </module>
   <module name="gnome-doc-utils">
     <version release="gnome-2.10">
-      <component name="gnome-doc-utils" dir="gnome-doc-utils" group="desktop">
+      <component name="gnome-doc-utils" dir="gnome-doc-utils" group="proposed">
         <podir dir="po"/>
         <potname name="gnome-doc-utils.pot"/>
         <branch name="HEAD"/>
@@ -1196,8 +1201,8 @@
     </version>
   </module>
   <module name="gnome-keyring-manager">
-    <version release="HEAD">
-      <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="extras">
+    <version release="gnome-2.10">
+      <component name="gnome-keyring-manager" dir="gnome-keyring-manager" group="proposed">
 	<podir dir="po"/>
 	<potname name="gnome-keyring-manager.pot"/>
 	<branch name="HEAD"/>
@@ -1248,7 +1253,7 @@
   </module>
   <module name="gnome-menus">
     <version release="gnome-2.10">
-      <component name="gnome-menus" dir="gnome-menus" group="desktop">
+      <component name="gnome-menus" dir="gnome-menus" group="proposed">
 				<podir dir="po"/>
         <potname name="gnome-menus.pot"/>
         <branch name="HEAD"/>
@@ -1415,8 +1420,8 @@
     </version>
   </module>
   <module name="gnome-schedule">
-    <version release="HEAD">
-      <component name="gnome-schedule" dir="gnome-schedule" group="extras">
+    <version release="gnome-2.10">
+      <component name="gnome-schedule" dir="gnome-schedule" group="proposed">
 	<podir dir="po"/>
 	<potname name="gnome-schedule.pot"/>
 	<branch name="HEAD"/>
@@ -1736,8 +1741,8 @@
     </version>
   </module>
   <module name="goobox">
-    <version release="HEAD">
-      <component name="goobox" dir="goobox" group="extras">
+    <version release="gnome-2.10">
+      <component name="goobox" dir="goobox" group="proposed">
         <podir dir="po"/>
         <potname name="goobox.pot"/>
         <branch name="HEAD"/>
@@ -1925,8 +1930,8 @@
     </version>
   </module>
   <module name="gwget">
-    <version release="HEAD">
-      <component name="gwget" dir="gwget" group="extras">
+    <version release="gnome-2.10">
+      <component name="gwget" dir="gwget" group="proposed">
 	<podir dir="po"/>
 	<potname name="gwget.pot"/>
 	<branch name="HEAD"/>
@@ -2144,8 +2149,8 @@
     </version>
   </module>
   <module name="libgnomesu">
-    <version release="HEAD">
-      <component name="libgnomesu" dir="libgnomesu" group="extras">
+    <version release="gnome-2.10">
+      <component name="libgnomesu" dir="libgnomesu" group="proposed">
         <podir dir="po"/>
         <potname name="libgnomesu-1.0.pot"/>
         <branch name="HEAD"/>
@@ -2482,8 +2487,8 @@
     </version>
   </module>
   <module name="nautilus-sendto">
-    <version release="HEAD">
-      <component name="nautilus-sendto" dir="nautilus-sendto" group="extras">
+    <version release="gnome-2.10">
+      <component name="nautilus-sendto" dir="nautilus-sendto" group="proposed">
         <podir dir="po"/>
         <potname name="nautilus-sendto.pot"/>
         <branch name="HEAD"/>
@@ -2763,8 +2768,8 @@
     </version>
   </module>
   <module name="totem">
-    <version release="HEAD">
-      <component name="totem" dir="totem" group="fifth-toe">
+    <version release="gnome-2.10">
+      <component name="totem" dir="totem" group="proposed">
         <podir dir="po"/>
 	<potname name="totem.pot"/>
 	<branch name="HEAD"/>
