@@ -1,3 +1,7 @@
+2004-12-07  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added "proposed" section.
+
 2004-12-06  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: nautilus-cd-burner has been branched.
